crates/mssql-client/tests/compile-fail/tvp_on_enum.rs
use mssql_derive::Tvp;

/// Tvp can only be derived for structs, not enums.
#[derive(Tvp)]
#[mssql(type_name = "dbo.SomeType")]
enum NotAStruct {
    A,
    B,
}

fn main() {}
